test/associative/types/testBorrowed.good
./AssocTest.chpl:1: In function 'testAssoc':
./AssocTest.chpl:10: error: creating a 'new borrowed' type is a not allowed
  testBorrowed.chpl:9: called as testAssoc(type t = borrowed T)
